Spacing correction

--- a/ghu_web/ghu_global/static/ghu_global/css/style.css
+++ b/ghu_web/ghu_global/static/ghu_global/css/style.css
@@ -26,6 +26,14 @@ header {
     margin: 0 auto;
 }
 
+.jumbotron {
+    height: 300px;
+    margin-bottom: 0;
+    border-radius: 0;
+    display: flex;
+    align-items: center;
+}
+
 #logo {
     display: block;
     text-align: center;
@@ -49,7 +57,6 @@ nav a {
     display: inline-block;
     text-align: center;
     font-size: 20px;
-    padding: 8px;
     border-bottom: 4px solid #668cff;
 }
 
